@@ -1,3 +1,4 @@
+#A1_1 Lacks measurments
 ['/home/martin/Documents/PhD/www/Scannomatic/data/Calbration_Curve/Cal_curv_replicate_12_time_1.tiff', 'A1_3 FACS', -2.86415476946, 13.041661018480864]
 ['/home/martin/Documents/PhD/www/Scannomatic/data/Calbration_Curve/Cal_curv_replicate_12_time_1.tiff', 'A1_3 OD', -2.86415476946, 18.97790429713976]
 ['/home/martin/Documents/PhD/www/Scannomatic/data/Calbration_Curve/Cal_curv_replicate_12_time_1.tiff', 'A1_5 OD', -2.40193526784, 9.48895214856988]
@@ -30,6 +31,8 @@
 ['/home/martin/Documents/PhD/www/Scannomatic/data/Calbration_Curve/Cal_curv_replicate_12_time_2.tiff', 'C1_7 FACS', -2.2743580113, 14.669954770622443]
 ['/home/martin/Documents/PhD/www/Scannomatic/data/Calbration_Curve/Cal_curv_replicate_12_time_2.tiff', 'C1_9 FACS', -0.987636516581, 6.647124703855266]
 ['/home/martin/Documents/PhD/www/Scannomatic/data/Calbration_Curve/Cal_curv_replicate_12_time_2.tiff', 'C1_9 OD', -0.987636516581, 6.461339651087659]
+#C1_11 had artefacts on image that would intefere with measurements
+#C2_1 had artefacts on image that would intefere with measurements
 ['/home/martin/Documents/PhD/www/Scannomatic/data/Calbration_Curve/Cal_curv_replicate_12_time_2.tiff', 'C2_3 OD', -5.15649170176, 60.019206145966706]
 ['/home/martin/Documents/PhD/www/Scannomatic/data/Calbration_Curve/Cal_curv_replicate_12_time_2.tiff', 'C2_3 FACS', -5.15649170176, 53.29205345710628]
 ['/home/martin/Documents/PhD/www/Scannomatic/data/Calbration_Curve/Cal_curv_replicate_12_time_2.tiff', 'C2_5 FACS', -2.75644912515, 27.928447778418928]
@@ -38,6 +41,7 @@
 ['/home/martin/Documents/PhD/www/Scannomatic/data/Calbration_Curve/Cal_curv_replicate_12_time_2.tiff', 'C2_7 OD', -1.56117664347, 14.808111554440377]
 ['/home/martin/Documents/PhD/www/Scannomatic/data/Calbration_Curve/Cal_curv_replicate_12_time_2.tiff', 'C2_9 OD', -0.942300836208, 6.311271931669962]
 ['/home/martin/Documents/PhD/www/Scannomatic/data/Calbration_Curve/Cal_curv_replicate_12_time_2.tiff', 'C2_9 OD', -0.942300836208, 7.457819665923339]
+#C2_11 had artefacts on image that would intefere with measurements
 ['/home/martin/Documents/PhD/www/Scannomatic/data/Calbration_Curve/Cal_curv_replicate_12_time_3.tiff', 'E1_3 OD', -72.8984570916, 1197.0791269302902]
 ['/home/martin/Documents/PhD/www/Scannomatic/data/Calbration_Curve/Cal_curv_replicate_12_time_3.tiff', 'E1_3 FACS', -72.8984570916, 970.8311719404653]
 ['/home/martin/Documents/PhD/www/Scannomatic/data/Calbration_Curve/Cal_curv_replicate_12_time_3.tiff', 'E1_5 FACS', -56.3127775404, 670.6133540372671]
@@ -58,6 +62,7 @@
 ['/home/martin/Documents/PhD/www/Scannomatic/data/Calbration_Curve/Cal_curv_replicate_12_time_3.tiff', 'E2_7 OD', -39.091654837, 541.0578232544444]
 ['/home/martin/Documents/PhD/www/Scannomatic/data/Calbration_Curve/Cal_curv_replicate_12_time_3.tiff', 'E2_9 OD', -25.9285698564, 328.8872647542481]
 ['/home/martin/Documents/PhD/www/Scannomatic/data/Calbration_Curve/Cal_curv_replicate_12_time_3.tiff', 'E2_9 FACS', -25.9285698564, 213.95943723734698]
+#E2_11 had artefacts on image that would intefere with measurements
 ['/home/martin/Documents/PhD/www/Scannomatic/data/Calbration_Curve/Cal_curv_replicate_12_time_4.tiff', 'G1_1 FACS', -96.4419140485, 1855.338576379632]
 ['/home/martin/Documents/PhD/www/Scannomatic/data/Calbration_Curve/Cal_curv_replicate_12_time_4.tiff', 'G1_1 OD', -96.4419140485, 1999.4668088509732]
 ['/home/martin/Documents/PhD/www/Scannomatic/data/Calbration_Curve/Cal_curv_replicate_12_time_4.tiff', 'G1_3 OD', -90.5646106622, 1671.5752606861417]
@@ -70,6 +75,7 @@
 ['/home/martin/Documents/PhD/www/Scannomatic/data/Calbration_Curve/Cal_curv_replicate_12_time_4.tiff', 'G1_9 OD', -53.5096609106, 715.9050232669133]
 ['/home/martin/Documents/PhD/www/Scannomatic/data/Calbration_Curve/Cal_curv_replicate_12_time_4.tiff', 'G1_11 OD', -46.8424495223, 622.2000995520159]
 ['/home/martin/Documents/PhD/www/Scannomatic/data/Calbration_Curve/Cal_curv_replicate_12_time_4.tiff', 'G1_11 FACS', -46.8424495223, 614.9410983905757]
+#G2_1 had artefacts on image that would intefere with measurements
 ['/home/martin/Documents/PhD/www/Scannomatic/data/Calbration_Curve/Cal_curv_replicate_12_time_4.tiff', 'G2_3 FACS', -90.1142231808, 1483.228952124753]
 ['/home/martin/Documents/PhD/www/Scannomatic/data/Calbration_Curve/Cal_curv_replicate_12_time_4.tiff', 'G2_3 OD', -90.1142231808, 1639.2753562271448]
 ['/home/martin/Documents/PhD/www/Scannomatic/data/Calbration_Curve/Cal_curv_replicate_12_time_4.tiff', 'G2_5 OD', -80.0628639583, 1277.6831345826236]
