@@ -12529,4 +12529,74 @@
 *
 * 
 
+*** ANALYSIS
+* 15 Feb 2012 16:11:58
+*
+* Activated
+
+*** REFERENCE SCAN POSITIONS
+* 15 Feb 2012 16:12:16
+*
+* [(77.41935483870967, 860.9677419354839), (98.06451612903228, 675.1612903225807)]
+
+*** SCAN POSITIONS
+* 15 Feb 2012 16:12:16
+*
+* [(857.86770848065487, 87.397923272868695), (672.10680020544237, 108.44893518321837)]
+
+*** TERMINATING
+* 15 Feb 2012 16:13:08
+*
+* 
+
+*** ANALYSIS
+* 15 Feb 2012 16:17:42
+*
+* Activated
+
+*** REFERENCE SCAN POSITIONS
+* 15 Feb 2012 16:17:52
+*
+* [(77.41935483870967, 860.9677419354839), (98.06451612903228, 675.1612903225807)]
+
+*** SCAN POSITIONS
+* 15 Feb 2012 16:17:52
+*
+* [(857.86770848065487, 87.397923272868695), (672.10680020544237, 108.44893518321837)]
+
+*** ANALYSIS
+* 15 Feb 2012 16:18:30
+*
+* Alternative measures: see in program (from mean), 4497.0 (from median)
+
+*** ANALYSIS
+* 15 Feb 2012 16:18:33
+*
+* Alternative measures: see in program (from mean), 3630.0 (from median)
+
+*** ANALYSIS
+* 15 Feb 2012 16:19:01
+*
+* Alternative measures: see in program (from mean), 1575.0 (from median)
+
+*** ANALYSIS
+* 15 Feb 2012 16:19:08
+*
+* Alternative measures: see in program (from mean), 2582.0 (from median)
+
+*** ANALYSIS
+* 15 Feb 2012 16:19:18
+*
+* Alternative measures: see in program (from mean), 36181.0 (from median)
+
+*** ANALYSIS
+* 15 Feb 2012 16:19:28
+*
+* Alternative measures: see in program (from mean), 20552.0 (from median)
+
+*** TERMINATING
+* 15 Feb 2012 16:21:21
+*
+* 
+
 
